; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bhnd/cores/chipc/extr_chipc.c_chipc_activate_resource.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bhnd/cores/chipc/extr_chipc.c_chipc_activate_resource.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.resource = type { i32 }
%struct.chipc_softc = type { i32 }
%struct.rman = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32, i32, %struct.resource*)* @chipc_activate_resource to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @chipc_activate_resource(i32 %0, i32 %1, i32 %2, i32 %3, %struct.resource* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.resource*, align 8
  %12 = alloca %struct.chipc_softc*, align 8
  %13 = alloca %struct.rman*, align 8
  store i32 %0, i32* %7, align 4
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store %struct.resource* %4, %struct.resource** %11, align 8
  %14 = load i32, i32* %7, align 4
  %15 = call %struct.chipc_softc* @device_get_softc(i32 %14)
  store %struct.chipc_softc* %15, %struct.chipc_softc** %12, align 8
  %16 = load %struct.chipc_softc*, %struct.chipc_softc** %12, align 8
  %17 = load i32, i32* %9, align 4
  %18 = call %struct.rman* @chipc_get_rman(%struct.chipc_softc* %16, i32 %17)
  store %struct.rman* %18, %struct.rman** %13, align 8
  %19 = load %struct.rman*, %struct.rman** %13, align 8
  %20 = icmp eq %struct.rman* %19, null
  br i1 %20, label %26, label %21

21:                                               ; preds = %5
  %22 = load %struct.resource*, %struct.resource** %11, align 8
  %23 = load %struct.rman*, %struct.rman** %13, align 8
  %24 = call i32 @rman_is_region_manager(%struct.resource* %22, %struct.rman* %23)
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %33, label %26

26:                                               ; preds = %21, %5
  %27 = load i32, i32* %7, align 4
  %28 = load i32, i32* %8, align 4
  %29 = load i32, i32* %9, align 4
  %30 = load i32, i32* %10, align 4
  %31 = load %struct.resource*, %struct.resource** %11, align 8
  %32 = call i32 @bus_generic_activate_resource(i32 %27, i32 %28, i32 %29, i32 %30, %struct.resource* %31)
  store i32 %32, i32* %6, align 4
  br label %40

33:                                               ; preds = %21
  %34 = load %struct.chipc_softc*, %struct.chipc_softc** %12, align 8
  %35 = load i32, i32* %8, align 4
  %36 = load i32, i32* %9, align 4
  %37 = load i32, i32* %10, align 4
  %38 = load %struct.resource*, %struct.resource** %11, align 8
  %39 = call i32 @chipc_try_activate_resource(%struct.chipc_softc* %34, i32 %35, i32 %36, i32 %37, %struct.resource* %38, i32 1)
  store i32 %39, i32* %6, align 4
  br label %40

40:                                               ; preds = %33, %26
  %41 = load i32, i32* %6, align 4
  ret i32 %41
}

declare dso_local %struct.chipc_softc* @device_get_softc(i32) #1

declare dso_local %struct.rman* @chipc_get_rman(%struct.chipc_softc*, i32) #1

declare dso_local i32 @rman_is_region_manager(%struct.resource*, %struct.rman*) #1

declare dso_local i32 @bus_generic_activate_resource(i32, i32, i32, i32, %struct.resource*) #1

declare dso_local i32 @chipc_try_activate_resource(%struct.chipc_softc*, i32, i32, i32, %struct.resource*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
